<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RecordDetailsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="715dp"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/detailsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Record Details"
                android:textAlignment="center"
                android:textColor="#EF4343"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="1. Systolic Pressure:"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_record_details_sys_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="120 mmHg"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EF4343" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="2. Diastolic Pressure:"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_record_details_dia_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="80 mmHg"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EF4343" />

            <TextView
                android:id="@+id/systolicText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="3. Heart Rate:"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_record_details_heart_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="120 bits/min"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EF4343" />

            <TextView
                android:id="@+id/diastolicText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="4. Measurement Date:"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_record_details_date_measured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="12-08-2022"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EF4343" />

            <TextView
                android:id="@+id/heartrateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="5. Measurement Time:"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_record_details_time_measured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="08:20 AM"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EF4343" />

            <TextView
                android:id="@+id/commentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="6. Comment:"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activity_record_details_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="comments text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EF4343" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>