...
            android:textColor="#EF4343"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/coe_record_action_button"
            android:layout_width="116dp"
            android:layout_height="56dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#EF4343"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/save"
...
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/systolic_pressure"
                android:textSize="16sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_systolic_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:inputType="numberSigned"
                    android:textColor="@color/black"/>
...
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/diastolic_pressure"
                android:textSize="16sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_diastolic_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:inputType="numberSigned"
                    android:textColor="@color/black" />
...
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/heart_rate"
                android:textSize="16sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_heart_rate_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:inputType="numberSigned"
                    android:textColor="@color/black" />
...
                android:textSize="16sp"
                app:endIconDrawable="@drawable/baseline_access_time_24"

                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_time_measured_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:inputType="time"
                    android:textColor="@color/black" />
...
                android:hint="@string/date_measured"
                android:textSize="16sp"
                app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/coe_record_date_edit_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:inputType="date"
                    android:textColor="@color/black"
...
