...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/r_r_v_i_heart_rate_title">

            <Button
                android:id="@+id/r_r_v_i_view_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="0.65"
                android:backgroundTint="@color/black"
                android:text="Details"
                android:textAllCaps="false"
...

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="2dp"
                android:orientation="horizontal" />
            <Button
                android:id="@+id/r_r_v_i_edit_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:backgroundTint="#F9B36D"
                android:drawableLeft="@drawable/baseline_edit_24"
                android:textAllCaps="false"
...
            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="2dp"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/r_r_v_i_delete_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:backgroundTint="#FF6565"
                android:drawableLeft="@drawable/baseline_delete_outline_24"
                android:textAllCaps="false"
...
